--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -1,9 +1,9 @@
-NAME = ex00
+NAME = ex01
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRCS = newZombie.cpp randomChump.cpp Zombie.cpp main.cpp
+SRCS = Zombie.cpp main.cpp zombieHorde.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
